# slackmacs

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  elisp-benchmarks.el  emacs-slack.el
__mocks__/: conversations.json  delete_message_event.json  delete_reply_event.json  edit_message_event.json  edit_reply_event.json  messages.json  new_message.json  new_message_event.json  new_reply.json  new_reply_event.json  replies.json  users.json
elisp/: elisp-benchmarks.el  slackmacs-conversation-list.el  slackmacs-conversation.el  slackmacs-message.el  (+7 more)
emacs-rust/: Cargo.toml
emacs-rust/src/: conversation.rs  conversation_list.rs  custom_errors.rs  helpers.rs  lib.rs  message.rs  messages_list.rs  user.rs  users_list.rs  websocket.rs
emacs-rust/src/api_types/: connection.rs  conversation.rs  event.rs  messages.rs  mod.rs  slack.rs  user.rs
emacs-rust/src/helpers/: fetch_api.rs  url_builder.rs
emacs-rust/src/tests/: helpers_test.rs  main_test.rs  mod.rs  test_utils.rs
emacs-rust/src/tests/api_types_tests/: event_tests.rs  mod.rs  slack_test.rs
rust/: Cargo.toml
rust-backend/: Cargo.toml
rust-backend/src/: main.rs
rust-backend/src/helpers/: get_response.rs  mod.rs  responses.rs  url_builder.rs
rust/src/: api_helpers.rs  api_types.rs  conversation.rs  conversation_list.rs  custom_errors.rs  lib.rs  message.rs  test.rs  users_list.rs
rust/src/api_types/: conversation.rs  messages.rs  mod.rs  profile.rs  user.rs
rust/src/helpers/: fetch_api.rs  handle_long_operation.rs  mod.rs  url_builder.rs
rust/src/structures/: api_types.rs  mod.rs  user.rs
(+23 files in other folders)
