[package]
name = "slackmacs-module-rs"
version = "0.1.0"
edition = "2021"
authors = ["Radosław Kostrzewski <radoslaw.kostrzewski@protonmail.com>"]
include = ["Cargo.toml", "README.md", "src/**/*"]

[lib]
crate-type = ["cdylib"]

[dependencies]
emacs = "0.18"
serde = { version = "1.0.174", features = ["derive"] }
serde_json = "1.0.103"
itertools = "0.12.0"
