[package]
name = "slackmacs-rust-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "1.0.1", features = ["full"] }
tokio = { version = "1.34.0", features = ["full"] }
http-body-util = "0.1"
hyper-util = { version = "0.1.1", features = ["full"] }
reqwest = { version = "0.11.18", features = ["json", "blocking"] }
serde = { version = "1.0.174", features = ["derive"] }
serde_json = "1.0.103"
dotenv = "0.15.0"
websocket = "0.27.0"
