[package]
name = "slackmacs-module-rs"
version = "0.1.0"
edition = "2021"
authors = ["Radosław Kostrzewski <radoslaw.kostrzewski@protonmail.com>"]

[lib]
crate-type = ["cdylib"]

[dependencies]
emacs = "0.18"
tokio = { version = "1.29.1", features = ["full"] }
reqwest = { version = "0.11.18", features = ["json", "blocking"] }
serde = { version = "1.0.174", features = ["derive"] }
serde_json = "1.0.103"
dotenv = "0.15.0"

[dev-dependencies]
emacs-rs-module = "0.18.0"
